<resources>
    <string name="app_name">SI APP</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_listar">Listar</string>
    <string name="menu_apagar">Apagar</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="txt_anderson">  Anderson Silva</string>
    <string name="txt_Fanderson">Show Guns</string>
    <string name="btnVerMais">Ver Mais</string>
    <string name="txt_breno">Breno Henrique</string>
    <string name="txt_Fbreno">Só de boas em Portugal</string>
    <string name="txt_bruno">Bruno H. Cruz</string>
    <string name="txt_Fbruno">#Gratidão</string>
    <string name="txt_camilo">Camilo Otávio</string>
    <string name="txt_Fcamilo">Mais um casando...</string>
    <string name="txt_gabriel">Gabriel Alcântara</string>
    <string name="txt_Fgabriel">Sem comentários...</string>
    <string name="txt_lauro">Lauro Oliveira</string>
    <string name="txt_Flauro">#paredão</string>
    <string name="txt_luis">Luis Fernando</string>
    <string name="txt_Fluis">Python ou JS?</string>
    <string name="txt_marcelo">Marcelo Marques</string>
    <string name="txt_Fmarcelo">Aopa São Gonçalo!!!</string>
    <string name="txt_pedro">Pedro Aguiar</string>
    <string name="txt_Fpedro">"????"</string>
    <string name="txt_regis">Regis Danesi</string>
    <string name="txt_Fregis">#Facistas</string>
    <string name="txt_renan">Renan</string>
    <string name="txt_Frenan">Joinha aos colegas</string>
    <string name="txt_samuel">Samuel Rodrigues</string>
    <string name="txt_Fsamuel">Aquela morena...</string>
    <string name="txt_vinicius">Vinicius Rocha</string>
    <string name="txt_Fvinicius">#Porto(LugardaHora)</string>
    <string name="txt_emBreve">Em Breve</string>
    <string name="txt_competencias">Competências</string>
    <string name="txt_desenvolvedorCsharp">Desenvolvedor C#</string>
    <string name="txt_desenvolvedorJS">Desenvolvedor JS</string>
    <string name="txt_desenvolvedorPHP">Desenvolvedor PHP</string>
    <string name="txt_desenvolvedorPython">Desenvolvedor Python</string>
    <string name="txt_contatos">Contatos:</string>
</resources>
