<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verMaisLuis_activity">

        <LinearLayout
            android:background="@android:color/white"
            android:id="@+id/layoutCardAnderson"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="Lauro"
                android:id="@+id/imgluis"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/luis"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtNomeLuis"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_luis"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtFraseLuis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_Fluis"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtCompetencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_competencias" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDesenvolvedorPython"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_desenvolvedorPython" />

            <TextView
                android:id="@+id/txtDesenvolvedorJS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_desenvolvedorJS" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtContatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_contatos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtRenan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_renan" />

            <TextView
                android:id="@+id/txtBruno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_bruno" />

            <TextView
                android:id="@+id/txtCamilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_camilo" />

            <TextView
                android:id="@+id/txtPedro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_pedro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
