<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verMaisRegis_activity">


        <LinearLayout
            android:background="@android:color/white"
            android:id="@+id/layoutCardAnderson"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">


            <ImageView
                android:contentDescription="Regis"
                android:id="@+id/imgRegis"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/regis"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtNomeRegis"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_regis"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtFraseRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_Fregis"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtCompetencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_competencias" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDesenvolvedorCsharp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_desenvolvedorCsharp" />

            <TextView
                android:id="@+id/txtDesenvolvedorPHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_desenvolvedorPHP" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtContatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_contatos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtRenan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_renan" />

            <TextView
                android:id="@+id/txtBruno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_bruno" />

            <TextView
                android:id="@+id/txtCamilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_camilo" />

            <TextView
                android:id="@+id/txtPedro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_pedro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />




        </LinearLayout>
    </ScrollView>