<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verMaisGabriel_activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:background="@android:color/white"
            android:id="@+id/layoutCardAnderson"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="Gabriel"
                android:id="@+id/imgGabriel"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/gabriel"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtNomeGabriel"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_gabriel"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtFraseGabriel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_Fgabriel"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtCompetencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_competencias" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDesenvolvedorCsharp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_desenvolvedorCsharp" />

            <TextView
                android:id="@+id/txtDesenvolvedorPython"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_desenvolvedorPython" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtContatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_contatos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtRenan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_renan" />

            <TextView
                android:id="@+id/txtBruno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_bruno" />

            <TextView
                android:id="@+id/txtCamilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_camilo" />

            <TextView
                android:id="@+id/txtLuis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_luis" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>